# lightsysmon

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  config.rs  interactive.rs  main.rs
src/display/: mod.rs  plain.rs  tui.rs
src/metrics/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  process.rs
