[package]
name = "lightsysmon"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4.5"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = "0.4"
ratatui = "0.29"
crossterm = "0.28"